[package]
name = "constellation"
version = "0.1.0"
edition = "2021"
authors = ["KemoshCode <kemosh@live.com>"]
description = "A Physics Based Game"
license = "MIT/Apache-2.0"
repository = "https://github.com/KemoshCode/Built-Different"

[lib]
name = "built_different_lib"
path = "src/lib.rs"

[[bin]]
name = "built_different"
path = "src/main.rs"

[dependencies]
