[package]
name = "constellation"
version = "0.1.0"
edition = "2021"
authors = ["KemoshCode <kemosh@live.com>"]
description = "A ASCII Based Graphics Library"
license = "MIT/Apache-2.0"
repository = "https://github.com/KemoshCode/constellation"

[lib]
name = "constellation"
path = "src/lib.rs"

[[bin]]
name = "constellation_bin"
path = "src/main.rs"

[dependencies]
